# pmi-j

./: .eslintignore  .eslintrc.cjs  .gitignore  .snyk  Cargo.toml  Dockerfile  LICENSE  README.md  config.js  docker-package.json  index.js  package-lock.json  package.json  pmij.env  pmij.env.defaults  webpack.config.cjs  webpack.config.js  webpack.config.js.prod  webpack.node.js
.github/workflows/: codeql-analysis.yml
public/: app.js  custom.css  index.html
public/component/: peer.js
server/: index.js
server/middleware/: handle-server-error.js  handle-unauthorized.js
server/utils/: error-status.js
src/: comnet_create_adress.js  index.html  index.js  print.js  style.css  test_recursive.html  test_recursive.js
systemd/: pmij.service
