[package]
name = "pmi-j"
version = "0.1.0"
authors = ["TeeVeeEss <TeeVeeEss@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
iota-client = { git = "https://github.com/iotaledger/iota.rs", branch = "dev" }
iota-wallet = { git = "https://github.com/iotaledger/wallet.rs", branch = "develop" }
node-bindgen = { version = "4.0" }

[build-dependencies]
node-bindgen = { version = "4.0", features = ["build"] }
